// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item default snapshot 1`] = `
<div
  className="item"
  onClick={undefined}
  style={
    Object {
      "height": 40,
    }
  }
>
  <WithStyles(Checkbox)
    checked={false}
    color="primary"
    disabled={false}
    indeterminate={false}
    type="checkbox"
  />
  <ItemLabel
    label=""
  />
</div>
`;

exports[`Item snapshot with border 1`] = `
<div
  className="item with_border"
  onClick={undefined}
  style={
    Object {
      "height": 40,
    }
  }
>
  <WithStyles(Checkbox)
    checked={false}
    color="primary"
    disabled={false}
    indeterminate={false}
    type="checkbox"
  />
  <ItemLabel
    label=""
  />
</div>
`;

exports[`Item snapshot with checked status 1`] = `
<div
  className="item selected"
  onClick={undefined}
  style={
    Object {
      "height": 40,
    }
  }
>
  <WithStyles(Checkbox)
    checked={true}
    color="primary"
    disabled={false}
    indeterminate={false}
    type="checkbox"
  />
  <ItemLabel
    label=""
  />
</div>
`;

exports[`Item snapshot with disabled 1`] = `
<div
  className="item disabled"
  onClick={undefined}
  style={
    Object {
      "height": 40,
    }
  }
>
  <WithStyles(Checkbox)
    checked={true}
    color="primary"
    disabled={true}
    indeterminate={false}
    type="checkbox"
  />
  <ItemLabel
    label=""
  />
</div>
`;

exports[`Item snapshot with group item 1`] = `
<div
  className="item with_grouping"
  onClick={undefined}
  style={
    Object {
      "height": 40,
    }
  }
>
  <ItemLabel
    label="Hi"
  />
</div>
`;

exports[`Item snapshot with height 1`] = `
<div
  className="item"
  onClick={undefined}
  style={
    Object {
      "height": 20,
    }
  }
>
  <WithStyles(Checkbox)
    checked={false}
    color="primary"
    disabled={false}
    indeterminate={false}
    type="checkbox"
  />
  <ItemLabel
    label=""
  />
</div>
`;

exports[`Item snapshot with indeterminate and checked status 1`] = `
<div
  className="item selected"
  onClick={undefined}
  style={
    Object {
      "height": 40,
    }
  }
>
  <WithStyles(Checkbox)
    checked={true}
    color="primary"
    disabled={false}
    indeterminate={true}
    type="checkbox"
  />
  <ItemLabel
    label=""
  />
</div>
`;

exports[`Item snapshot with indeterminate status 1`] = `
<div
  className="item"
  onClick={undefined}
  style={
    Object {
      "height": 40,
    }
  }
>
  <WithStyles(Checkbox)
    checked={false}
    color="primary"
    disabled={false}
    indeterminate={true}
    type="checkbox"
  />
  <ItemLabel
    label=""
  />
</div>
`;

exports[`Item snapshot with valid item 1`] = `
<div
  className="item"
  onClick={undefined}
  style={
    Object {
      "height": 40,
    }
  }
>
  <WithStyles(Checkbox)
    checked={false}
    color="primary"
    disabled={false}
    indeterminate={false}
    type="checkbox"
  />
  <ItemLabel
    label="Hi"
  />
</div>
`;
